# apc

./: .pre-commit-config.yaml  .tool-versions  LICENSE  README.md  pyproject.toml
src/: sequenciais.py
